[RPP][AI] Remove button flickering and fix button visibility bug
Only animating the width gets rid of the flickering.
Also fix the button not disappearing the the label is not empty.

Before: https://screencast.googleplex.com/cast/NDcxMjU2ODAzNDY4OTAyNHw0MmRjMjdhMi03MA
After: http://screencast/cast/NjI2NTUzNTgwMDAxNjg5Nnw3Nzg3M2Y3Yy02Mg

Bug: 405980546
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6387104
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>
Auto-Submit: Alina Varkki <alinavarkki@chromium.org>

--- a/front_end/panels/timeline/overlays/components/entryLabelOverlay.css
+++ b/front_end/panels/timeline/overlays/components/entryLabelOverlay.css
@@ -36,6 +36,8 @@
   align-items: center;
   gap: var(--sys-size-4);
   pointer-events: auto;
+  transition:
+    width var(--sys-motion-duration-long2) var(--sys-motion-easing-emphasized);
 
   * {
     /* Make up for the padding in a hovered button to only see the pen icon when it is not hovered */
@@ -48,8 +50,6 @@
   width: fit-content;
   height: var(--sys-size-13);
   padding: var(--sys-size-3) var(--sys-size-5);
-  transition:
-    all var(--sys-motion-duration-long2) var(--sys-motion-easing-emphasized);
   overflow: hidden;
   top: -4px;
 
